fix horizontal overflow on small screens

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -19,6 +19,7 @@ body {
 
 body, html {
   height: 100%;
+  overflow-x: hidden;
   font: 0.9em/1.692307em;
 }
 
